syntax = "proto3";

package org.dash.platform.dapi;

service TransactionsFilterStream {
  rpc subscribeToTransactionsWithProofs (TransactionsWithProofsRequest) returns (stream TransactionsWithProofsResponse);
}

message TransactionsWithProofsRequest {
  BloomFilter bloomFilter = 1;

  oneof fromBlock {
    bytes fromBlockHash = 2;
    uint32 fromBlockHeight = 3;
  }

  uint32 count = 4;
}

message BloomFilter {
  bytes v_data = 1;
  uint32 n_hash_funcs = 2;
  uint32 n_tweak = 3;
  uint32 n_flags = 4;
}

message TransactionsWithProofsResponse {
  oneof responses {
    RawTransactions raw_transactions = 1;
    InstantSendLockMessages instant_send_lock_messages = 2;
    bytes raw_merkle_block = 3;
  }
}

message RawTransactions {
  repeated bytes transactions = 1;
}

message InstantSendLockMessages {
  repeated bytes messages = 1;
}
