syntax = "proto3";

package org.dash.platform;

service DapiTransactionsFilterStream {
    rpc GetNewTransactionsByFilter (BloomFilter) returns (stream RawTransaction);
}

message BloomFilter {
    bytes bytes = 1;
}

message RawTransaction {
    bytes data = 1;
}
